--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,4 @@
 // Fonts 
-@import url('https://fonts.googleapis.com/css?family=Nunito'); 
+// @import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700&display=swap');
 // Variables 
-@import 'variables'; 
-// Bootstrap 
-@import '~bootstrap/scss/bootstrap';
+// @import 'variables'; 
